--- a/src/main/webapp/index.zul
+++ b/src/main/webapp/index.zul
@@ -1,61 +1,17 @@
-<window title="Toyota dashboard" border="normal">
-   <include src="menu.zul"/>
-
-    <zk xmlns:h="native">
-        <style>
-            .main {
-                margin: 0;
-                padding: 5px;
-                width: 100%;
-            }
-            .main .tag {
-                list-style: none outside none;
-                position: relative;
-                float: left;
-                padding-right: 10px;
-                line-height: 25px;
-            }
-            .tagLevel-1, .tagLevel-1 .z-radio-cnt { font-size: 20px; font-weight: bold; color: #008BB6; }
-            .tagLevel-2, .tagLevel-2 .z-radio-cnt { font-size: 18px; color: green; }
-            .tagLevel-3, .tagLevel-3 .z-radio-cnt { font-size: 16px; color: darkorange; }
-            .tagLevel-4, .tagLevel-4 .z-radio-cnt { font-size: 14px; }
-            .tagLevel-5, .tagLevel-5 .z-radio-cnt { font-size: 12px; }
-            .tagLevel-6, .tagLevel-6 .z-radio-cnt { font-size: 10px; color: gray;}
-        </style>
-        <div>
-            <!-- Data From Server -->
-            <zscript><![CDATA[
-            import org.zkoss.zk.ui.metainfo.*;
-
-            //A simple Random method
-            int getRandom() {
-                return (int) (Math.random() * 6 + 1);
-            }
-
-            //Get All the components this ZK version Support
-            ComponentDefinitionMap allCompMap = this.page.getLanguageDefinition().getComponentDefinitionMap();
-
-            Map tagMap = new HashMap();
-            for (Iterator it = allCompMap.getNames().iterator();it.hasNext();) {
-                tagMap.put(it.next(), getRandom());
-            }
-
-            Set tagSet = tagMap.entrySet();
-        ]]></zscript>
-
-            <!-- Page Dom Structure -->
-            <h:ul class="main">
-                <h:li forEach="${tagSet}" class="tag" val="${each.value}">${each.key}</h:li>
-            </h:ul>
-
-            <!-- Client Handling -->
-            <script type="text/javascript">
-                zk.afterMount(function() {
-                    jq(".main > li").addClass(function() {
-                        return 'tagLevel-' + jq(this).attr('val');
-                    });
-                });
-            </script>
-        </div>
-    </zk>
-</window>
+<?link rel="stylesheet" type="text/css" href="styles/main.css"?>
+<zk>
+    <borderlayout hflex="1" vflex="1">
+        <north height="100px" border="none" sclass="bannerContainer">
+            <label style="font-size:50px">North for header</label>
+        </north>
+        <west width="260px" border="none" collapsible="true" splittable="true" minsize="300">
+            <include src="leftmenu.zul" />
+        </west>
+        <center id="mainContent" autoscroll="true">
+            <label style="font-size:50px">Center for content</label>
+        </center>
+        <south height="50px" border="none">
+            <label style="font-size:50px">South for footer</label>
+        </south>
+    </borderlayout>
+</zk>
