Opprettet domene-modul og la Dealer-obj der. La til spring-context for kobling mot mysql-db, samt dozer mapping mellom persistert Dealer-obj og web Dealer-obj. Viser obj fra db i skjermbildet dealerlist.zul vha. zk's MVVM pattern

--- a/myzk-web/src/main/webapp/index.zul
+++ b/myzk-web/src/main/webapp/index.zul
@@ -8,7 +8,7 @@
             <include src="leftmenu.zul" />
         </west>
         <center id="mainContent" autoscroll="true">
-            <label style="font-size:50px">Center for content</label>
+            <include src="dealerlist.zul"/>
         </center>
         <south height="50px" border="none">
             <label style="font-size:50px">South for footer</label>
