--- a/myzk-web/src/main/webapp/leftmenu.zul
+++ b/myzk-web/src/main/webapp/leftmenu.zul
@@ -20,7 +20,7 @@
             <image src="/imgs/doc.png"/><a href="register.zul">Registrer deg</a>
         </row>
         <row>
-            <image src="/imgs/doc.png"/><a href="dealers.zul">Forhandlere</a>
+            <image src="/imgs/doc.png"/><a href="dealerlist.zul">Forhandlere</a>
         </row>
     </rows>
 </grid>
